added basic authentication
